--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
-/*
-Theme Name: Theme Gue
-Theme URI: http://google.com/
-Description: Theme Pertama yang Gue Buat untuk Bangsa Indonesia Tercinta
-Author: Uwan
-Author URI: http://google.com/
-Version: 1.0
-*/
+<form class="w3-container">
+
+<label class="w3-text-blue"><b>First Name</b></label>
+<input class="w3-input w3-border" type="text">
+ 
+<label class="w3-text-blue"><b>Last Name</b></label>
+<input class="w3-input w3-border" type="text">
+
+<button class="w3-btn w3-blue">Register</button>
+ 
+</form>
